--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -41,7 +41,7 @@
             <a href="#">
                 <div class="card">
                     <div class="img-container">
-                        <i class="fa-solid fa-box-tissue"></i>
+                        <img class="img" src="{% static 'img/modulos/Reportesdelpersonal.png' %}" alt="ReportesPersonal">
                     </div>
                     <div class="card-body">
                         <p class="card-text"> Reportes del personal </p>
@@ -51,7 +51,7 @@
             <a href="{% url 'login:listar_rol' %}">
                 <div class="card">
                     <div class="img-container">
-                        <i class="fa-sharp fa-solid fa-address-book"></i>
+                        <img class="img" src="{% static 'img/modulos/Rol.png' %}" alt="RolImg">
                     </div>
                     <div class="card-body">
                         <p class="card-text"> Rol </p>
@@ -61,7 +61,7 @@
             <a href="{% url 'turno:listar_turno' %}">
                 <div class="card">
                     <div class="img-container">
-                        <i class="fa-sharp fa-solid fa-address-book"></i>
+                        <img class="img" src="{% static 'img/modulos/Turno.png' %}" alt="TurnoImg">
                     </div>
                     <div class="card-body">
                         <p class="card-text"> Turno </p>
@@ -71,7 +71,7 @@
             <a href="{% url 'login:personal' %}">
                 <div class="card">
                     <div class="img-container">
-                        <i class="fa-solid fa-users"></i>
+                        <img class="img" src="{% static 'img/modulos/Registrodelpersonal.png' %}" alt="RegPersonalImg">
                     </div>
                     <div class="card-body">
                         <p class="card-text"> Registro de personal </p>
@@ -81,7 +81,7 @@
             <a href="{% url 'novedad:inicio_tipoNov' %}">
                 <div class="card">
                     <div class="img-container">
-                        <i class="fa-solid fa-list-ul"></i>
+                        <img class="img" src="{% static 'img/modulos/TipoNovedad.png' %}" alt="TipoNovImg">
                     </div>
                     <div class="card-body">
                         <p class="card-text"> Tipo de Novedades </p>
@@ -91,7 +91,7 @@
             <a href="{% url 'novedad:inicio' %}">
                 <div class="card">
                     <div class="img-container">
-                        <i class="fa-solid fa-list-check"></i>
+                        <img class="img" src="{% static 'img/modulos/Novedad.png' %}" alt="NovedadImg">
                     </div>
                     <div class="card-body">
                         <p class="card-text"> Novedades </p>
@@ -101,7 +101,7 @@
             <a href="{% url 'ubicacion:inicio' %}">
                 <div class="card">
                     <div class="img-container">
-                        <i class="fa-solid fa-map-location-dot"></i>
+                        <img class="img" src="{% static 'img/modulos/Ubicacion.png' %}" alt="UbicacionImg">
                     </div>
                     <div class="card-body">
                         <p class="card-text"> Lugares de Guardia </p>
@@ -111,7 +111,7 @@
             <a href="#">
                 <div class="card">
                     <div class="img-container">
-                        <i class="fa-solid fa-calendar"></i>
+                        <img class="img" src="{% static 'img/modulos/Planificacion.png' %}" alt="PlanificacionImg">
                     </div>
                     <div class="card-body">
                         <p class="card-text"> Planificación </p>
