--- a/Autenticacion/static/css/style.css
+++ b/Autenticacion/static/css/style.css
@@ -37,21 +37,44 @@ body {
 
 /* Sidebar */
 .side-bar {
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
     width: 250px;
     height: calc(100vh - 75.22px); /* Updated for consistent viewport height */
     background-color: var(--sidebar-bg);
     transition: width var(--transition-speed) ease;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
+    overflow-y: auto; /* Agrega scroll vertical si el contenido sobrepasa el espacio */
 }
 
+.side-bar .nav {
+    display: flex;
+    flex-direction: column; /* Coloca los elementos en una sola columna */
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
+/* Opcional: Ajustes para mejorar el aspecto del scroll */
+.side-bar::-webkit-scrollbar {
+    width: 8px;
+}
+
+.side-bar::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+}
+
+.side-bar::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
 .navbar-toggler-icon{
     color: white;
 }
 
 .side-bar .nav-link {
     color: var(--sidebar-text-color);
-    margin: 10px;
+    padding: 5px;
+    margin: 10px 20px;
     transition: all 0.5s ease;
     white-space: nowrap;
     overflow: hidden;
@@ -170,6 +193,10 @@ body {
     text-decoration: none;
 }
 
+.img{
+    width: 70%;
+    padding: 5px;
+}
 
 
 /* UIVERSE.IO */
