Modificaciones en las vistas de los módulos

--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -18,7 +18,7 @@
             </li>
             <li>
                 <a class="nav-link active" href="{% url 'turno:listar_turno' %}">
-                    <i class="fa-sharp fa-solid fa-address-book"></i>
+                    <i class="fa-sharp fa-solid fa-code-compare"></i>
                     <span class="nav-item"> Turno </span>
                 </a>
                 <span class="tooltip"> Turno </span>
