--- a/Autenticacion/static/css/style.css
+++ b/Autenticacion/static/css/style.css
@@ -51,7 +51,6 @@ body {
     flex-direction: column; /* Coloca los elementos en una sola columna */
     padding: 0;
     margin: 0;
-    list-style: none;
 }
 
 /* Opcional: Ajustes para mejorar el aspecto del scroll */
@@ -65,7 +64,7 @@ body {
 }
 
 .side-bar::-webkit-scrollbar-thumb:hover {
-    background-color: #555;
+    background-color: #c4c4c4;
 }
 .navbar-toggler-icon{
     color: white;
@@ -122,6 +121,8 @@ body {
 .side-bar .logout {
     display: flex;
     justify-content: center;
+    align-items: center;
+    padding: 10px;
 }
 
 .side-bar .tooltip {
