--- a/Autenticacion/templates/form.html
+++ b/Autenticacion/templates/form.html
@@ -1,9 +1,6 @@
 {% extends 'modulos.html' %}
 {% load static %}
 
-{% block css %}
-<link rel="stylesheet" href="{% static 'css/diseño_forms.css' %}">
-{% endblock %}
 
 {% block header %}
 {% endblock %}
@@ -45,7 +42,7 @@
 
                 <div class="div-btn">
 
-                    <button type="submit" class="btn ">
+                    <button type="submit" class="btn align-items-center ">
                         Guardar registro
                     </button>
                     <a href="{{cancelar}}" class="btn nav-link text-center align-items-center">
