--- a/Autenticacion/templates/form.html
+++ b/Autenticacion/templates/form.html
@@ -24,14 +24,23 @@
             <div class="modal-body">
                 <div class="container-regist">
                     {% if messages %}
-                    {% for message in messages %}
-                    <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
-            {% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
-            {% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
-                        {{ message }}
-                    </div>
-                    {% endfor %}
+                        {% for message in messages %}
+                        <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
+                            {% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
+                            {% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
+                            {{ message }}
+                        </div>
+                        {% endfor %}
                     {% endif %}
+                    {% if form.errors %}
+                    <div class="error-message">
+                        {% for field in form %}
+                            {% for error in field.errors %}
+                                <p>{{ error }}</p>
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
+                {% endif %}
                     <div class="regist-content">
                         {% block controls %}
 
