--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -108,6 +108,16 @@
                     </div>
                 </div>
             </a>
+            <a href="{% url 'calendario:listado_calendario' %}">
+                <div class="card">
+                    <div class="img-container">
+                        <img class="img" src="{% static 'img/modulos/Calendario.png' %}" alt="CalendarioImg">
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text"> Calendario </p>
+                    </div>
+                </div>
+            </a>
             <a href="#">
                 <div class="card">
                     <div class="img-container">
