--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -52,6 +52,13 @@
                 <span class="tooltip"> Lugares de Guardia </span>
             </li>
             <li>
+                <a class="nav-link active" href="{% url 'calendario:listado_calendario' %}">
+                    <i class="fa-solid fa-calendar"></i>
+                    <span class="nav-item"> Calendario </span>
+                </a>
+                <span class="tooltip"> Calendario </span>
+            </li>
+            <li>
                 <a class="nav-link active" href="#">
                     <i class="fa-solid fa-calendar"></i>
                     <span class="nav-item"> Planificación </span>
