--- a/Autenticacion/Modulos/Login/templates/cambiar_clave.html
+++ b/Autenticacion/Modulos/Login/templates/cambiar_clave.html
@@ -31,6 +31,15 @@ Restablecer Clave
                     {% endfor %}
                 </div>
                 {% endif %}
+                {% if form.errors %}
+                    <div class="error-message">
+                        {% for field in form %}
+                            {% for error in field.errors %}
+                                {{ error }}
+                            {% endfor %}
+                        {% endfor %}
+                    </div>
+                {% endif %}
                 <h2 class="title">Restablecer contraseña</h2>
                 <div class="input-div pass">
                     <div class="i">
