--- a/Autenticacion/templates/form.html
+++ b/Autenticacion/templates/form.html
@@ -1,6 +1,9 @@
 {% extends 'modulos.html' %}
 {% load static %}
 
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/diseño_forms.css' %}">
+{% endblock %}
 
 {% block header %}
 {% endblock %}
@@ -22,25 +25,24 @@
                 </h2>
             </div>
             <div class="modal-body">
+                
                 <div class="container-regist">
                     {% if messages %}
-                        {% for message in messages %}
-                        <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
-                            {% if message.tags == 'error' %} background-color: #ffcccc; color: #d8000c; {% endif %}
-                            {% if message.tags == 'success' %} background-color: #aee17a; color: #005700; {% endif %}">
-                            {{ message }}
+                        <div class="error-message">
+                            {% for message in messages %}
+                                {{ message }} 
+                            {% endfor %}
                         </div>
-                        {% endfor %}
                     {% endif %}
                     {% if form.errors %}
-                    <div class="error-message">
-                        {% for field in form %}
-                            {% for error in field.errors %}
-                                <p>{{ error }}</p>
+                        <div class="error-message">
+                            {% for field in form %}
+                                {% for error in field.errors %}
+                                    {{ error }} <br>
+                                {% endfor %}
                             {% endfor %}
-                        {% endfor %}
-                    </div>
-                {% endif %}
+                        </div>
+                    {% endif %}
                     <div class="regist-content">
                         {% block controls %}
 
@@ -69,5 +71,7 @@
 {% endblock %}
 
 {% block js %}
+<script src="{% static 'js/hide_show_passw.js' %}"></script>
 <script src="{% static 'js/input_effect.js' %}"></script>
+<script src="{% static 'js/ocultar_mensajes.js'%}"></script>
 {% endblock %}
