--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -13,11 +13,13 @@
     <!-- Fuente de letra de google -->
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/diseño_forms.css' %}">
+    
     {% block css %}
     <link rel="stylesheet" href="{% static 'css/modulos.css' %}">
     <link rel="stylesheet" href="{% static 'css/style_tabla.css' %}">
-    <link rel="stylesheet" href="{% static 'css/diseño_forms.css' %}">
     {% endblock %}
+    
     
     <!-- CSS - Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -138,8 +140,21 @@
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <script src="{% static 'js/side_bar.js' %}"></script>
+    <script src="{% static 'js/modal.js' %}"></script>
+    
     {% block js %}
+    
     {% endblock %}
+    
+
+    
+	{% comment %} {% block JS %}
+    <script src="{% static 'js/input_effect.js' %}"></script>
+    
+    <script src="{% static 'js/ocultar_mensajes.js'%}"></script>
+    <script src="{% static 'js/hide_show_passw.js' %}"></script>
+    <script src="{% static "js/parametros_clave.js" %}"></script>
+{% endblock %} {% endcomment %}
 </body>
 
 </html>
