Estados Activo e Inactivo

--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/novedad.html
@@ -32,9 +32,15 @@ Registrar nueva novedad
         <a class="btn btn-dark" onclick="abrir_modal_editar('{% url 'novedad:editar_nov' nov.id %}')">
             Editar
         </a>
-        <a class="btn btn-danger"> 
-            Inactivar 
-        </a>
+        <form action="{% url 'novedad:inactivar_activar_novedad' pk=nov.id %}" method="post" style="display: inline;">
+            {% csrf_token %}
+
+            {% if nov.Estado %}
+            <button type="submit" class="btn btn-success">Inactivar</button> <!-- Verde para Activo -->
+            {% else %}
+            <button type="submit" class="btn btn-danger">Activar</button> <!-- Rojo para Inactivo -->
+            {% endif %}
+        </form>
     </td>
 </tr>
 {% endfor %}
