--- a/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
+++ b/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
@@ -40,10 +40,18 @@ Registrar nuevo personal
         <a class="btn btn-dark" onclick="abrir_modal_editar('{% url 'login:editar_personal' i.id %}')"> 
             Editar
         </a>
+    
+        <form action="{% url 'login:inactivar_objeto' pk=i.id %}" method="post" style="display: inline;">
+            {% csrf_token %}
 
-        <a href="#" class="btn btn-danger"> 
-            Inactivar    
-        </a>
+            {% if i.estado %}
+            <button type="submit" class="btn btn-success">Inactivar</button> <!-- Verde para Activo -->
+            {% else %}
+            <button type="submit" class="btn btn-danger">Activar</button> <!-- Rojo para Inactivo -->
+            {% endif %}
+        </form>
+    </td>
+        
     </td>
 </tr>
 {% endfor %}
