--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -120,11 +120,11 @@
                         <img class="img" src="{% static 'img/modulos/Calendario.png' %}" alt="CalendarioImg">
                     </div>
                     <div class="card-body">
-                        <p class="card-text"> Calendario </p>
+                        <p class="card-text"> Periodo </p>
                     </div>
                 </div>
             </a>
-            <a href="#">
+            <a href="{% url 'calendario:listar_planificacion' %}">
                 <div class="card">
                     <div class="img-container">
                         <img class="img" src="{% static 'img/modulos/Planificacion.png' %}" alt="PlanificacionImg">
