--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -54,12 +54,12 @@
             <li>
                 <a class="nav-link active" href="{% url 'calendario:listado_calendario' %}">
                     <i class="fa-solid fa-calendar"></i>
-                    <span class="nav-item"> Calendario </span>
+                    <span class="nav-item"> Periodo </span>
                 </a>
-                <span class="tooltip"> Calendario </span>
+                <span class="tooltip"> Periodo </span>
             </li>
             <li>
-                <a class="nav-link active" href="#">
+                <a class="nav-link active" href="{% url 'calendario:listar_planificacion' %}">
                     <i class="fa-solid fa-calendar"></i>
                     <span class="nav-item"> Planificación </span>
                 </a>
