--- a/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
+++ b/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
@@ -33,10 +33,15 @@ Registrar nueva Ubicación
     {% endif %}
     <td>
 
-        <a class="btn btn-danger">
-            Inactivar
-        </a>
+        <form action="{% url 'ubicacion:inactivar_activar_ubicacion' pk=i.id %}" method="post" style="display: inline;">
+            {% csrf_token %}
 
+            {% if i.Estado %}
+            <button type="submit" class="btn btn-success">Inactivar</button> <!-- Verde para Activo -->
+            {% else %}
+            <button type="submit" class="btn btn-danger">Activar</button> <!-- Rojo para Inactivo -->
+            {% endif %}
+        </form>
 
     </td>
 </tr>
