--- a/Autenticacion/Modulos/Login/templates/rol/listado_rol.html
+++ b/Autenticacion/Modulos/Login/templates/rol/listado_rol.html
@@ -28,9 +28,16 @@ Registrar un nuevo rol
     {% endif %}
 
     <td> 
-        <a href="#" class="btn btn-danger"> 
-            Inactivar    
-        </a>
+        <form action="{% url 'login:inactivar_rol' pk=i.id %}" method="post" style="display: inline;">
+            {% csrf_token %}
+
+            {% if i.estado %}
+            <button type="submit" class="btn btn-success">Inactivar</button> <!-- Verde para Activo -->
+            {% else %}
+            <button type="submit" class="btn btn-danger">Activar</button> <!-- Rojo para Inactivo -->
+            {% endif %}
+        </form>
+
     </td>
 </tr>
 {% endfor %}
