--- a/Autenticacion/Modulos/Coordinador/Turno/templates/listado_turno.html
+++ b/Autenticacion/Modulos/Coordinador/Turno/templates/listado_turno.html
@@ -28,6 +28,9 @@ Registrar un nuevo turno
     <td> Inactivo </td>
     {% endif %}
     <td>
+        <a class="btn btn-dark" onclick="abrir_modal_editar('{% url 'turno:editar_turno' i.id %}')">
+            Editar
+        </a>
         <form action="{% url 'turno:inactivar_activar_turno' pk=i.id %}" method="post" style="display: inline;">
             {% csrf_token %}
 
