--- a/Autenticacion/Modulos/Login/templates/rol/listado_rol.html
+++ b/Autenticacion/Modulos/Login/templates/rol/listado_rol.html
@@ -28,6 +28,9 @@ Registrar un nuevo rol
     {% endif %}
 
     <td> 
+        <a class="btn btn-dark" onclick="abrir_modal_editar('{% url 'login:editar_rol' i.id %}')">
+            Editar
+        </a>
         <form action="{% url 'login:inactivar_rol' pk=i.id %}" method="post" style="display: inline;">
             {% csrf_token %}
 
