--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
@@ -32,13 +32,13 @@ Registrar nuevo tipo de Novedad
             </a>
             
         
-            <form action="{% url 'novedad:inactivar_activar_tipo_novedad' pk=tpn.id %}" method="post" style="display: inline;">
+            <form action="{% url 'novedad:inactivar_activar_tipo_novedad' tpn.id %}" method="post" style="display: inline;">
                 {% csrf_token %}
     
                 {% if tpn.Estado %}
-                <button type="submit" class="btn btn-success">Inactivar</button> <!-- Verde para Activo -->
+                <button type="submit" class="btn btn-danger">Inactivar</button> <!-- Verde para Activo -->
                 {% else %}
-                <button type="submit" class="btn btn-danger">Activar</button> <!-- Rojo para Inactivo -->
+                <button type="submit" class="btn btn-success">Activar</button> <!-- Rojo para Inactivo -->
                 {% endif %}
             </form>
         </td>
