--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_calendario.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_calendario.html
@@ -36,10 +36,10 @@ Registrar un nuevo calendario
         <form action="{% url 'calendario:InactivarActivarCalendario' i.id %}" method="post" style="display: inline;">
             {% csrf_token %}
 
-            {% if nov.Estado %}
-            <button type="submit" class="btn btn-success">Inactivar</button> <!-- Verde para Activo -->
+            {% if i.Estado %}
+            <button type="submit" class="btn btn-danger">Inactivar</button> <!-- Verde para Activo -->
             {% else %}
-            <button type="submit" class="btn btn-danger">Activar</button> <!-- Rojo para Inactivo -->
+            <button type="submit" class="btn btn-success">Activar</button> <!-- Rojo para Inactivo -->
             {% endif %}
         </form>
     </td>
