--- a/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_planificacion.html
+++ b/Autenticacion/Modulos/Coordinador/Calendario/templates/listado_planificacion.html
@@ -32,7 +32,15 @@ Registra una nueva planificación
     <td> Inactivo </td>
     {% endif %}
     <td> 
+        <form action="{% url 'calendario:InactivarActivarPlanificacion' i.id %}" method="post" style="display: inline;">
+            {% csrf_token %}
 
+            {% if i.Estado %}
+            <button type="submit" class="btn btn-danger">Inactivar</button> <!-- Verde para Activo -->
+            {% else %}
+            <button type="submit" class="btn btn-success">Activar</button> <!-- Rojo para Inactivo -->
+            {% endif %}
+        </form>
     </td>
 </tr>
 {% endfor %}
