--- a/Autenticacion/Modulos/Login/templates/login.html
+++ b/Autenticacion/Modulos/Login/templates/login.html
@@ -25,7 +25,16 @@
 		<div class="login-content">
 			<form method="POST">
 				{% csrf_token %}
-
+				<div style='font-size: 1.2em'>
+                    {% if form.non_field_errors %}
+                        <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; background-color: #ffcccc; color: #d8000c;">
+                            {% for error in form.non_field_errors %}
+                                {{ error }}
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                </div>
+				
 				<div style='font-size: 1.2em'>
 				{% if messages %}
 					{% for message in messages %}
