--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
@@ -6,6 +6,16 @@
 Modulo Tipo Novedad
 {% endblock %}
 
+{% block search %}
+<form action="{{ dir_search }}" method="GET">
+    <div class="input-group container mb-3">
+        <input type="text" name="query" value="{{ query }}"
+        placeholder = "Filtra por Tipo de Novedades" aria-describedby="basic-addon2" />
+        <button type="submit" class="btn btn-primary mr-1" id="idSearchSp">Buscar</button>
+    </div>
+</form>
+{% endblock %}
+
 {% block btnTitle %}
 Registrar nuevo tipo de Novedad
 {% endblock %}
