--- a/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
+++ b/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
@@ -4,7 +4,15 @@
 {% block title %}
 Módulo Ubicación
 {% endblock %}
-
+{% block search %}
+<form action="{{ dir_search }}" method="GET">
+    <div class="input-group">
+        <input type="text" name="query" value="{{ query }}"
+        placeholder = "Filtrar por Lugar o Sector" aria-describedby="basic-addon2" />
+        <button type="submit" class="btn btn-primary mr-1" id="idSearchSp">Buscar</button>
+    </div>
+</form>
+{% endblock %}
 {% block btnTitle %}
 Registrar nueva Ubicación
 {% endblock %}
