--- a/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
+++ b/Autenticacion/Modulos/Login/templates/personal/listado_personal.html
@@ -45,9 +45,9 @@ Registrar nuevo personal
             {% csrf_token %}
 
             {% if i.estado %}
-            <button type="submit" class="btn btn-success">Inactivar</button> <!-- Verde para Activo -->
+            <button type="submit" class="btn btn-danger">Inactivar</button> <!-- Rojo para Inactivo -->   
             {% else %}
-            <button type="submit" class="btn btn-danger">Activar</button> <!-- Rojo para Inactivo -->
+            <button type="submit" class="btn btn-success">Activar</button> <!-- Verde para Activo -->
             {% endif %}
         </form>
     </td>
