--- a/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
+++ b/Autenticacion/Modulos/Coordinador/Novedad/templates/tipNov.html
@@ -36,9 +36,9 @@ Registrar nuevo tipo de Novedad
                 {% csrf_token %}
     
                 {% if tpn.Estado %}
-                <button type="submit" class="btn btn-danger">Inactivar</button> <!-- Verde para Activo -->
+                <button type="submit" class="btn btn-danger">Inactivar</button> 
                 {% else %}
-                <button type="submit" class="btn btn-success">Activar</button> <!-- Rojo para Inactivo -->
+                <button type="submit" class="btn btn-success">Activar</button> 
                 {% endif %}
             </form>
         </td>
