--- a/Autenticacion/Modulos/Coordinador/Turno/templates/listado_turno.html
+++ b/Autenticacion/Modulos/Coordinador/Turno/templates/listado_turno.html
@@ -35,9 +35,9 @@ Registrar un nuevo turno
             {% csrf_token %}
 
             {% if i.Estado %}
-            <button type="submit" class="btn btn-danger">Inactivar</button> <!-- Verde para Activo -->
+            <button type="submit" class="btn btn-danger">Inactivar</button> 
             {% else %}
-            <button type="submit" class="btn btn-success">Activar</button> <!-- Rojo para Inactivo -->
+            <button type="submit" class="btn btn-success">Activar</button> 
             {% endif %}
         </form>
     </td>
