--- a/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
+++ b/Autenticacion/Modulos/Coordinador/Ubicacion/templates/ubicacion.html
@@ -40,9 +40,9 @@ Registrar nueva Ubicación
             {% csrf_token %}
 
             {% if i.Estado %}
-            <button type="submit" class="btn btn-danger">Inactivar</button> <!-- Verde para Activo -->
+            <button type="submit" class="btn btn-danger">Inactivar</button> 
             {% else %}
-            <button type="submit" class="btn btn-success">Activar</button> <!-- Rojo para Inactivo -->
+            <button type="submit" class="btn btn-success">Activar</button> 
             {% endif %}
         </form>
 
