--- a/Autenticacion/Modulos/Auditoria/templates/listar_auditoria.html
+++ b/Autenticacion/Modulos/Auditoria/templates/listar_auditoria.html
@@ -24,3 +24,24 @@ Modulo Auditoría
 <th> Nombre de la máquina </th>
 <th> Estación </th>
 {% endblock %}
+
+
+{% block tbody %}
+{% for i in auditoria %}
+<th> {{ i.tabla }} </th>
+<th> {{ i.registro_id }} </th>
+{% if i.descripcion == 'M' %}
+<th> Modificar </th>
+{% elif i.descripcion == 'C' %}
+<th> Crear </th>
+{% elif i.descripcion == 'A' %}
+<th> Activar </th>
+{% elif i.descripcion == 'I' %}
+<th> Inactivar </th>
+{% endif %}
+<th> {{ i.fecha }} </th>
+<th> {{ i.hora }} </th>
+<th> {{ i.nombre_maquina }} </th>
+<th> {{ i.estacion }} </th>
+{% endfor %}
+{% endblock %}
