--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -135,6 +135,16 @@
                     </div>
                 </div>
             </a>
+            <a href="{% url 'auditoria:listar_auditoria' %}">
+                <div class="card">
+                    <div class="img-container">
+                        <img class="img" src="{% static 'img/modulos/Auditoria.png' %}" alt="PlanificacionImg">
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text"> Auditoría </p>
+                    </div>
+                </div>
+            </a>
         </main>
     </div>
     {% endblock %}
