--- a/Autenticacion/templates/sidebar.html
+++ b/Autenticacion/templates/sidebar.html
@@ -65,6 +65,13 @@
                 </a>
                 <span class="tooltip"> Planificación </span>
             </li>
+            <li>
+                <a class="nav-link active" href="{% url 'auditoria:listar_auditoria' %}">
+                    <i class="fa-solid fa-calendar"></i>
+                    <span class="nav-item"> Auditoría </span>
+                </a>
+                <span class="tooltip"> Auditoría </span>
+            </li>
         </ul>
     </div>
     <div class="logout">
