Modificaciones en dimensiones del Sidebar, Navbar y Main

--- a/Autenticacion/static/css/diseño_forms.css
+++ b/Autenticacion/static/css/diseño_forms.css
@@ -1,7 +1,7 @@
-
-.container, .main-content, .cards-container, .content {
-    font-family: 'Arima', sans-serif;
-	overflow: hidden;
+.content {
+    display: flex;
+    height: 100vh; /* Abarca toda la altura de la pantalla */
+	font-family: 'Arima', sans-serif;
 }
 
 
