--- a/Autenticacion/static/css/modulos.css
+++ b/Autenticacion/static/css/modulos.css
@@ -42,6 +42,49 @@
     
     transform: translate(2px, 2px);
 }
+
+
+
+
+
+
+
+.container-x {
+    margin-top: 200px;
+    text-align: center;
+    background: white;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
+}
+
+
+.h1-x {
+    color: #d9534f;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+
+.p-x {
+    color: #666;
+    margin-bottom: 20px;
+}
+.btn-x {
+    display: inline-block;
+    padding: 10px 20px;
+    font-size: 16px;
+    color: #fff;
+    background-color: #007bff;
+    border: none;
+    border-radius: 4px;
+    text-decoration: none;
+}
+.btn-x:hover {
+    background-color: #0056b3;
+}
+
+
 /* 
 .card img{
     width: 150px;
