--- a/Autenticacion/templates/acceso_restringido.html
+++ b/Autenticacion/templates/acceso_restringido.html
@@ -6,51 +6,16 @@ Acceso Restringido
 {% endblock %}
 
 {% block css %}
-<style>
-    body {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        font-family: Arial, sans-serif;
-        background-color: #f9f9f9;
-    }
-    .container {
-        text-align: center;
-        background: white;
-        padding: 30px;
-        border-radius: 10px;
-        box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.1);
-    }
-    h1 {
-        color: #d9534f;
-        font-size: 24px;
-        margin-bottom: 10px;
-    }
-    p {
-        color: #666;
-        margin-bottom: 20px;
-    }
-    .btn {
-        display: inline-block;
-        padding: 10px 20px;
-        font-size: 16px;
-        color: #fff;
-        background-color: #007bff;
-        border: none;
-        border-radius: 4px;
-        text-decoration: none;
-    }
-    .btn:hover {
-        background-color: #0056b3;
-    }
-</style>
+<link rel="stylesheet" href="{% static 'css/modulos.css' %}">
+
 {% endblock %}
 
+
+
 {% block main %}
-<div class="container">
-    <h1>Acceso Restringido</h1>
-    <p>No tienes permisos para acceder a esta página.</p>
-    <a href="{% url 'login:index' %}" class="btn">Ir al Menú Principal</a>
+<div class="container-x">
+    <h1 class="h1-x">Acceso Restringido</h1>
+    <p class="p-x">No tienes permisos para acceder a esta página.</p>
+    <a href="{% url 'login:index' %}" class="btn-x">Ir al Menú Principal</a>
 </div>
 {% endblock %}
