--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -14,13 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/diseño_forms.css' %}">
-    
+
     {% block css %}
     <link rel="stylesheet" href="{% static 'css/modulos.css' %}">
     <link rel="stylesheet" href="{% static 'css/style_tabla.css' %}">
     {% endblock %}
-    
-    
+
+
     <!-- CSS - Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -29,125 +29,138 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="icon" href="{% static 'img/logo_alcaldia_milagro_ico.ico' %}" type="image/x-icon">
 
+
+
+
+
+
+
+
 </head>
 
 <body>
-    {% block header %}
-    <header>
-        {% include 'navbar.html' %}
-    </header>
-    {% endblock %}
-    
-    
-    {% block main %}
+    <div style="display: flex; flex-direction: column;">
+        <div class="header">
+            {% block header %}
+            <header>
+                {% include 'navbar.html' %}
+            </header>
+            {% endblock %}
+        </div>
 
-   
-    <div class="cards-container">
-        <main class="cards">
-            <a href="#">
-                <div class="card">
-                    <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/Reportesdelpersonal.png' %}" alt="ReportesPersonal">
+
+        {% block main %}
+
+
+        <div class="cards-container">
+            <main class="cards">
+                <a href="#">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="img" src="{% static 'img/modulos/Reportesdelpersonal.png' %}"
+                                alt="ReportesPersonal">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text"> Reportes del personal </p>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text"> Reportes del personal </p>
+                </a>
+                <a href="{% url 'login:listar_rol' %}">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="img" src="{% static 'img/modulos/Rol.png' %}" alt="RolImg">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text"> Rol </p>
+                        </div>
                     </div>
-                </div>
-            </a>
-            <a href="{% url 'login:listar_rol' %}">
-                <div class="card">
-                    <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/Rol.png' %}" alt="RolImg">
+                </a>
+
+                <a href="{% url 'turno:listar_turno' %}">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="img" src="{% static 'img/modulos/Turno.png' %}" alt="TurnoImg">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text"> Turno </p>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text"> Rol </p>
+                </a>
+                <a href="{% url 'login:personal' %}">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="img" src="{% static 'img/modulos/Registrodelpersonal.png' %}"
+                                alt="RegPersonalImg">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text"> Registro de personal </p>
+                        </div>
                     </div>
-                </div>
-            </a>
-            
-            <a href="{% url 'turno:listar_turno' %}">
-                <div class="card">
-                    <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/Turno.png' %}" alt="TurnoImg">
+                </a>
+                <a href="{% url 'novedad:inicio_tipoNov' %}">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="img" src="{% static 'img/modulos/TipoNovedad.png' %}" alt="TipoNovImg">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text"> Tipo de Novedades </p>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text"> Turno </p>
+                </a>
+                <a href="{% url 'novedad:inicio' %}">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="img" src="{% static 'img/modulos/Novedad.png' %}" alt="NovedadImg">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text"> Novedades </p>
+                        </div>
                     </div>
-                </div>
-            </a>
-            <a href="{% url 'login:personal' %}">
-                <div class="card">
-                    <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/Registrodelpersonal.png' %}" alt="RegPersonalImg">
+                </a>
+                <a href="{% url 'ubicacion:inicio' %}">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="img" src="{% static 'img/modulos/Ubicacion.png' %}" alt="UbicacionImg">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text"> Lugares de Guardia </p>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text"> Registro de personal </p>
+                </a>
+                <a href="{% url 'calendario:listado_calendario' %}">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="img" src="{% static 'img/modulos/Calendario.png' %}" alt="CalendarioImg">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text"> Periodo </p>
+                        </div>
                     </div>
-                </div>
-            </a>
-            <a href="{% url 'novedad:inicio_tipoNov' %}">
-                <div class="card">
-                    <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/TipoNovedad.png' %}" alt="TipoNovImg">
+                </a>
+                <a href="{% url 'calendario:listar_planificacion' %}">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="img" src="{% static 'img/modulos/Planificacion.png' %}" alt="PlanificacionImg">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text"> Planificación </p>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <p class="card-text"> Tipo de Novedades </p>
+                </a>
+                <a href="{% url 'auditoria:listar_auditoria' %}">
+                    <div class="card">
+                        <div class="img-container">
+                            <img class="img" src="{% static 'img/modulos/Auditoria.png' %}" alt="PlanificacionImg">
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text"> Auditoría </p>
+                        </div>
                     </div>
-                </div>
-            </a>
-            <a href="{% url 'novedad:inicio' %}">
-                <div class="card">
-                    <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/Novedad.png' %}" alt="NovedadImg">
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text"> Novedades </p>
-                    </div>
-                </div>
-            </a>
-            <a href="{% url 'ubicacion:inicio' %}">
-                <div class="card">
-                    <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/Ubicacion.png' %}" alt="UbicacionImg">
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text"> Lugares de Guardia </p>
-                    </div>
-                </div>
-            </a>
-            <a href="{% url 'calendario:listado_calendario' %}">
-                <div class="card">
-                    <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/Calendario.png' %}" alt="CalendarioImg">
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text"> Periodo </p>
-                    </div>
-                </div>
-            </a>
-            <a href="{% url 'calendario:listar_planificacion' %}">
-                <div class="card">
-                    <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/Planificacion.png' %}" alt="PlanificacionImg">
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text"> Planificación </p>
-                    </div>
-                </div>
-            </a>
-            <a href="{% url 'auditoria:listar_auditoria' %}">
-                <div class="card">
-                    <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/Auditoria.png' %}" alt="PlanificacionImg">
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text"> Auditoría </p>
-                    </div>
-                </div>
-            </a>
-        </main>
+                </a>
+            </main>
+        </div>
+        {% endblock %}
     </div>
-    {% endblock %}
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/1a76f9833f.js" crossorigin="anonymous"></script>
     <!-- JS - Bootstrap -->
@@ -162,20 +175,20 @@
 
     <script src="{% static 'js/side_bar.js' %}"></script>
     <script src="{% static 'js/modal.js' %}"></script>
-    
-    {% block js %}
-    
-    {% endblock %}
-    
 
-    
-	{% comment %} {% block JS %}
+    {% block js %}
+
+    {% endblock %}
+
+
+
+    {% comment %} {% block JS %}
     <script src="{% static 'js/input_effect.js' %}"></script>
-    
+
     <script src="{% static 'js/ocultar_mensajes.js'%}"></script>
     <script src="{% static 'js/hide_show_passw.js' %}"></script>
-    <script src="{% static "js/parametros_clave.js" %}"></script>
-{% endblock %} {% endcomment %}
+    <script src="{% static " js/parametros_clave.js" %}"></script>
+    {% endblock %} {% endcomment %}
 </body>
 
 </html>
