--- a/Autenticacion/templates/index.html
+++ b/Autenticacion/templates/index.html
@@ -14,13 +14,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Arima:wght@100..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/diseño_forms.css' %}">
-    
+
     {% block css %}
     <link rel="stylesheet" href="{% static 'css/modulos.css' %}">
     <link rel="stylesheet" href="{% static 'css/style_tabla.css' %}">
     {% endblock %}
-    
-    
+
+
     <!-- CSS - Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -32,20 +32,19 @@
 </head>
 
 <body>
-    {% block header %}
+
     <header>
         {% include 'navbar.html' %}
     </header>
-    {% endblock %}
-    
-    
+
     {% block main %}
     <div class="cards-container">
         <main class="cards">
             <a href="#">
                 <div class="card">
                     <div class="img-container">
-                        <img class="img" src="{% static 'img/modulos/Reportesdelpersonal.png' %}" alt="ReportesPersonal">
+                        <img class="img" src="{% static 'img/modulos/Reportesdelpersonal.png' %}"
+                            alt="ReportesPersonal">
                     </div>
                     <div class="card-body">
                         <p class="card-text"> Reportes del personal </p>
@@ -62,7 +61,7 @@
                     </div>
                 </div>
             </a>
-            
+
             <a href="{% url 'turno:listar_turno' %}">
                 <div class="card">
                     <div class="img-container">
@@ -160,20 +159,20 @@
 
     <script src="{% static 'js/side_bar.js' %}"></script>
     <script src="{% static 'js/modal.js' %}"></script>
-    
-    {% block js %}
-    
-    {% endblock %}
-    
 
-    
-	{% comment %} {% block JS %}
+    {% block js %}
+
+    {% endblock %}
+
+
+
+    {% comment %} {% block JS %}
     <script src="{% static 'js/input_effect.js' %}"></script>
-    
+
     <script src="{% static 'js/ocultar_mensajes.js'%}"></script>
     <script src="{% static 'js/hide_show_passw.js' %}"></script>
-    <script src="{% static "js/parametros_clave.js" %}"></script>
-{% endblock %} {% endcomment %}
+    <script src="{% static " js/parametros_clave.js" %}"></script>
+    {% endblock %} {% endcomment %}
 </body>
 
 </html>
