--- a/Autenticacion/templates/modulos.html
+++ b/Autenticacion/templates/modulos.html
@@ -12,7 +12,7 @@
     {% endblock %}
     <!-- Main Content -->
     {% block forms %}
-    <main class="main-content pt-4">
+    <main class="main-content">
         {% if messages %}
         {% for message in messages %}
         <div class="message" style="padding: 10px; margin: 10px 0; border-radius: 5px; 
